Collectors toList() improvement